<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.maria.mysqlite.MainActivity">

    <EditText
           android:id="@+id/txt_first_name"
           android:layout_width="300sp"
        android:layout_marginTop="24sp"
        android:hint="@string/first_name"
           android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="300sp"
        android:hint="@string/last_name"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txt_age"
        android:layout_width="300sp"
        android:inputType="number"
        android:hint="@string/age"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txt_notes"
        android:layout_width="300sp"
        android:lines="4"
        android:hint="@string/notes"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
