<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="0.15">
    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txt_first_name1"
            android:layout_width="match_parent"
            android:layout_marginTop="24sp"
            android:hint="@string/first_name"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_last_name1"
            android:layout_width="300sp"
            android:hint="@string/last_name"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_age1"
            android:layout_width="300sp"
            android:inputType="number"
            android:hint="@string/age"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_notes1"
            android:layout_width="match_parent"
            android:lines="4"
            android:hint="@string/notes"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_returne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Returne"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_save1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Delete"
            android:layout_weight="1"/>

    </LinearLayout>





</LinearLayout>